test/library/standard/Map/testBanNonNilableClass.1.good
testBanNonNilableClass.chpl:15: In function 'main':
testBanNonNilableClass.chpl:16: error: Cannot initialize map because element type owned SomeClass is a non-nilable class
